--- a/app/src/main/res/layout/activity_employer.xml
+++ b/app/src/main/res/layout/activity_employer.xml
@@ -45,17 +45,16 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/love_music"
+                        android:id="@+id/employerName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/backdrop_title"
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/backdrop_title" />
 
                     <TextView
+                        android:id="@+id/employerSSoId"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/backdrop_subtitle"
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/backdrop_subtitle" />
 
@@ -77,7 +76,7 @@
 
     <fragment
         android:id="@+id/employerFragment"
-        class="info.gert.ttrackandroid.employer.view.EmployerFragment"
+        class="info.gert.ttrackandroid.employer.fragments.employerFragment.EmployerFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -86,7 +85,7 @@
 
     <fragment
         android:id="@+id/tasksFragment"
-        class="info.gert.ttrackandroid.employer.view.TasksFragment"
+        class="info.gert.ttrackandroid.employer.fragments.taskFragment.TasksFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="2"
