--- a/app/src/main/res/layout/employer_fragment.xml
+++ b/app/src/main/res/layout/employer_fragment.xml
@@ -8,24 +8,11 @@
     android:clipToPadding="false"
     android:scrollbars="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="info.gert.ttrackandroid.employer.view.EmployerActivity"
+    tools:context=".employer.activities.view.EmployerActivity"
     tools:showIn="@layout/activity_employer">
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Element 1" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Element 2" />
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
 </LinearLayout>
