--- a/app/src/main/res/layout-port/tasks_activity.xml
+++ b/app/src/main/res/layout-port/tasks_activity.xml
@@ -8,6 +8,6 @@
         android:id="@+id/detailFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        class="info.gert.ttrackandroid.employer.view.TasksFragment" />
+        class="info.gert.ttrackandroid.employer.fragments.taskFragment.TasksFragment" />
 
 </LinearLayout>
