--- a/app/src/main/res/layout/tasks_fragment.xml
+++ b/app/src/main/res/layout/tasks_fragment.xml
@@ -8,7 +8,7 @@
     android:clipToPadding="false"
     android:scrollbars="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="info.gert.ttrackandroid.employer.view.EmployerActivity"
+    tools:context=".employer.activities.view.EmployerActivity"
     tools:showIn="@layout/activity_employer">
 
     <TextView
